src/test/resources/rules/success/EmptyLineSeparatorCheck.java
package rules.success;

public class EmptyLineSeparatorCheck {
    public void method() {
        System.out.println("Hello World");

        System.out.println("Hello World");

        System.out.println("Hello World");
    }
}
